[Docs] T236. Fix man/html page generation.
* imap/admin/commands split into imap/admin/systemcommands (8) and
imap/admin/usercommands (1). internal sphinx links updated in all files.

* :cyrusman: and :manpage: references have been fixed to all point to the
right spot.

* Documentation added where possible, for packaged files.

* RST content now up to date with cyrus-imapd/man source. (cyrus-imapd/man
source will be going away soon!)

* cyradm.rst is now generated using a new tool 'tools/perl2rst' using
Pod::POM::View::Restructured from perl/imap/IMAP/Shell.pm. Using the
source, Luke! This adds a new dependency for people wanting to build the
docs.

* Shell.pm documentation improved, pulling in content from the old rst
file.

* lib/imapoptions had some comment changes to whitespace to make the rst generation via
tools/config2rst stop blurting warnings.

* New make target 'init' generates cyradm.rst and imapd.conf.rst from
Shell.pm and lib/imapoptions respectively. This gets called before make
targets man and html now, to ensure we generate the most up to date docs.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,10 +6,16 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = build
+PERL2RST      = ../tools/perl2rst
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
 $(error The '$(SPHINXBUILD)' command was not found. Make sure you have Sphinx installed, then set the SPHINXBUILD environment variable to point to the full path of the '$(SPHINXBUILD)' executable. Alternatively you can add the directory with the executable to your PATH. If you don't have Sphinx installed, grab it from http://sphinx-doc.org/)
+endif
+
+# User-friendly check for perl2rst
+ifeq ($(shell which $(PERL2RST) >/dev/null 2>&1; echo $$?), 1)
+$(error The '$(PERL2RST)' command was not found. Make sure you have perl2rst installed, then set the PERL2RST environment variable to point to the full path of the '$(PERL2RST)' script. It relies on Perl module Pod::POM::View::Restructured)
 endif
 
 # Internal variables.
@@ -48,8 +54,14 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+    
+init: ../lib/imapoptions ../perl/imap/IMAP/Shell.pm
+	@echo "creating imap/admin/systemcommands/cyradm.rst"
+	$(PERL2RST) cyradm < ../perl/imap/IMAP/Shell.pm > source/imap/admin/systemcommands/cyradm.rst 
+	@echo "creating imap/admin/configs/imapd.conf.rst"
+	../tools/config2rst ../lib/imapoptions > source/imap/admin/configs/imapd.conf.rst     
 
-html:
+html: init
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
@@ -127,7 +139,7 @@ text:
 	@echo
 	@echo "Build finished. The text files are in $(BUILDDIR)/text."
 
-man:
+man: init
 	$(SPHINXBUILD) -b cyrman $(ALLSPHINXOPTS) $(BUILDDIR)/man
 	@echo
 	@echo "Build finished. The manual pages are in $(BUILDDIR)/man."
