Revert "Do not install message_test, search_test or squat_dump into sbin."
To be replaced with a more complete commit

This reverts commit ceca3273095d11e751be7c95c655681bf8fb9bec.

--- a/Makefile.am
+++ b/Makefile.am
@@ -175,8 +175,10 @@ sbin_PROGRAMS += \
 	imap/mbexamine \
 	imap/mbpath \
 	imap/mbtool \
+	imap/message_test \
 	imap/quota \
-	imap/reconstruct 
+	imap/reconstruct \
+	imap/search_test
 
 if HAVE_CLAMAV
 sbin_PROGRAMS += imap/cyr_virusscan
@@ -187,8 +189,8 @@ sbin_PROGRAMS += imap/cyr_sphinxmgr
 endif
 
 if USE_SQUAT
+sbin_PROGRAMS += imap/squat_dump
 endif
-
 if SQUATTER
 # Despite the name, the squatter program handles any search engine
 sbin_PROGRAMS += imap/squatter
