--- a/configure.ac
+++ b/configure.ac
@@ -1467,7 +1467,8 @@ dnl
                 ],
                 AC_MSG_ERROR([Need libical for http]))
 
-        AC_CHECK_DECLS([icalrecur_freq_to_string, icalrecur_weekday_to_string],
+        AC_CHECK_DECLS([icalproperty_get_parent,
+                        icalrecur_freq_to_string, icalrecur_weekday_to_string],
                 [], [], [[#include <libical/ical.h>]])
 
         AC_CHECK_LIB(ical, icalparameter_new_iana, [
