Revert "temporarily revert libical2 support"
This reverts commit 0195e4981298365ba5fcdfe6f0f653f57c8c24d0.

--- a/configure.ac
+++ b/configure.ac
@@ -1241,6 +1241,11 @@ dnl
 	    AC_DEFINE(WITH_DKIM,[],[Build DKIM support into iSchedule?]) 
 	fi
 
+	AC_EGREP_HEADER(ICAL_IANA_PARAMETER, ical.h,
+		AC_DEFINE(HAVE_IANA_PARAMS,[],
+			[Do we have support for IANA params?]),
+		AC_MSG_WARN([Your version of libical can not support scheduling or managed attachments.  Consider upgrading to libical >= 0.48]))
+
 	AC_EGREP_HEADER(ICAL_SCHEDULESTATUS_PARAMETER, ical.h,
 		AC_DEFINE(HAVE_SCHEDULING_PARAMS,[],
 			[Do we have built-in support for scheduling params?]))
@@ -1258,7 +1263,7 @@ dnl
 	if test "$ENABLE_RSCALE" != no; then
 	     AC_SUBST(ICU_CFLAGS)
 	     AC_SUBST(ICU_LIBS)
-	     AC_CHECK_LIB(ical, icalrecur_rscale_token_handling_is_supported,
+	     AC_CHECK_LIB(ical, icalrecurrencetype_rscale_is_supported,
 		    AC_DEFINE(HAVE_RSCALE,[], [Build RSCALE support into httpd?]))
 	fi
 fi
