--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ depcomp
 doc/man/
 doc/text/
 docsrc/build/
+docsrc/imap/admin/configs/imapd.conf.rst
+docsrc/imap/admin/systemcommands/cyradm.rst
 imap/arbitron
 imap/calalarmd
 imap/ctl_conversationsdb
@@ -121,8 +123,7 @@ libcyrus_min.pc
 libcyrus_sieve.pc
 libtool
 ltmain.sh
-man/imapd.conf.5
-man/sieveshell.1
+man/
 master/master
 missing
 netnews/remotepurge
