--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -59,6 +59,8 @@ clean:
 init: ../lib/imapoptions ../perl/imap/IMAP/Shell.pm
 	@echo "creating imap/admin/systemcommands/cyradm.rst"
 	$(PERL2RST) cyradm < ../perl/imap/IMAP/Shell.pm > $(SOURCEDIR)/imap/admin/systemcommands/cyradm.rst
+	@echo "creating imap/admin/usercommands/sieveshell.rst"
+	$(PERL2RST) sieveshell < ../perl/sieve/scripts/sieveshell.pl > $(SOURCEDIR)/imap/admin/usercommands/sieveshell.rst
 	@echo "creating imap/admin/configs/imapd.conf.rst"
 	../tools/config2rst ../lib/imapoptions > $(SOURCEDIR)/imap/admin/configs/imapd.conf.rst
 
