Makefile.am: include png versions of diagrams in dist

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ coverage.xml
 cscope.out
 depcomp
 doc/man/
+doc/murder.png
+doc/netnews.png
 doc/text/
 docsrc/build/
 docsrc/imap/admin/configs/imapd.conf.rst
