--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,8 @@ coverage.xml
 cscope.out
 depcomp
 doc/man/
-doc/murder.png
-doc/netnews.png
+doc/legacy/murder.png
+doc/legacy/netnews.png
 doc/text/
 docsrc/build/
 docsrc/imap/admin/configs/imapd.conf.rst
