Makefile.am: generate text docs from sphinx sources

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ depcomp
 doc/html/
 doc/legacy/murder.png
 doc/legacy/netnews.png
+doc/text/
 docsrc/.doctrees/
 docsrc/build/
 docsrc/imap/admin/configs/imapd.conf.rst
