--- a/README.in
+++ b/README.in
@@ -1,12 +1,14 @@
-This is the Carnegie Mellon University Cyrus IMAP Server.
+This is the Carnegie Mellon University Cyrus IMAP Server,
+version @VERSION@.
 
-The 2.4 series contains numerous features and better standards
+The @CYRUS_IMAPD_SERIES@ series contains numerous features and better standards
 support than previous versions.
 
 No further development work will progress on anything older than
-version 2.2.  Versions 2.2 and 2.3 still receive security updates,
+version 2.3.  Versions 2.3 and 2.4 still receive security updates,
 but new features or non-security bugfixes are unlikely to be
-backported.
+backported.  Version 2.5 still receives security updates and non-security
+bugfixes.
 
 If you continue to install this software PLEASE be sure to read the
 documentation (located in the doc/ subdirectory).  Many common questions
