--- a/README.in
+++ b/README.in
@@ -1,23 +1,21 @@
-This is the Carnegie Mellon University Cyrus IMAP Server,
-version @VERSION@.
+This is the Carnegie Mellon University Cyrus IMAP Server, version @VERSION@.
 
-The @CYRUS_IMAPD_SERIES@ series contains numerous features and better standards
-support than previous versions.
+The @CYRUS_IMAPD_SERIES@ series contains numerous features and better standards support than
+previous versions.
 
-No further development work will progress on anything older than
-version 2.3.  Versions 2.3 and 2.4 still receive security updates,
-but new features or non-security bugfixes are unlikely to be
-backported.  Version 2.5 still receives security updates and non-security
-bugfixes.
+No further development work will progress on anything older than version 2.3.
+Versions 2.3 and 2.4 still receive security updates, but new features or
+non-security bugfixes are unlikely to be backported.  Version 2.5 still
+receives security updates and non-security bugfixes.
 
 If you continue to install this software PLEASE be sure to read the
-documentation (located in the doc/ subdirectory).  Many common questions
-can be answered just by carefully following the documentation.
-Please also refer to http://bugzilla.cyrusimap.org for any outstanding bugs.
+documentation (located in the doc/ subdirectory).  Many common questions can
+be answered just by carefully following the documentation.  Please also refer
+to http://bugzilla.cyrusimap.org for any outstanding bugs.
 
-Note that CMU only provides a source distribution. If you run into
-problems with any binary distribution, please contact the source of
-the binary distribution.
+Note that CMU only provides a source distribution. If you run into problems
+with any binary distribution, please contact the source of the binary
+distribution.
 
 ----------------------------------------------------------------------
 * For the real README file, please see doc/legacy/readme.html.
