README: update install and release notes links
Part of T8

--- a/README.in
+++ b/README.in
@@ -20,11 +20,13 @@ distribution.
 ----------------------------------------------------------------------
 * For the real README file, please see doc/legacy/readme.html.
 
-* To install the software, please read doc/legacy/install.html (but please
-  read doc/legacy/readme.html first!).
+* To install the software, please read doc/html/imap/installation.html (but
+  please read doc/legacy/readme.html first!).
 
-* To see the changes since previous versions, check doc/legacy/changes.html,
-  and if upgrading look at doc/legacy/install-upgrade.html as well.
+* Release notes, including changes since previous versions, are available in
+  doc/html/imap/release-notes/index.html.
+
+* If upgrading look at doc/legacy/install-upgrade.html as well.
 
 * To obtain updates to this software, visit the web page
             http://www.cyrusimap.org/
