--- a/configure.ac
+++ b/configure.ac
@@ -1348,6 +1348,13 @@ esac
 AC_MSG_CHECKING(for libcap)
 AC_MSG_RESULT($have_libcap)
 
+dnl
+dnl Check for jansson library, needed for JSON support
+dnl
+PKG_CHECK_MODULES([JANSSON], [jansson >= 2.3])
+dnl call AC_SUBST macro to support pkg-config version older than 0.24
+AC_SUBST([JANSSON_LIBS])
+AC_SUBST([JANSSON_CFLAGS])
 
 dnl
 dnl Test for mailbox event notification
@@ -1358,15 +1365,7 @@ AC_ARG_ENABLE(event-notification,
         [enable_event_notification="yes";])
 
 if test "$enable_event_notification" != "no"; then
-    PKG_CHECK_MODULES([JANSSON], [jansson >= 2.0],
-        [check_jansson=true]
-          dnl call AC_SUBST macro to support pkg-config version older that 0.24 without any bad consequence for recent version
-          [AC_SUBST([JANSSON_LIBS])]
-          [AC_SUBST([JANSSON_CFLAGS])]
-          [AC_DEFINE(ENABLE_MBOXEVENT,[],[Build with support of mailbox event notification])],
-        [check_jansson=false]
-          [AC_MSG_WARN([jansson 2.0 or later was not found, but is required to enable mailbox event notification])]
-          enable_event_notification="no")
+    AC_DEFINE(ENABLE_MBOXEVENT,[],[Build with support of mailbox event notification])
 
     dnl support for Apple Push Service registration
     dnl disabled by default
@@ -1378,7 +1377,6 @@ if test "$enable_event_notification" != "no"; then
         AC_DEFINE(ENABLE_APPLEPUSHSERVICE,[],[Build with support for Apple Push Service])
     fi
 fi
-AM_CONDITIONAL(JANSSON, test x$check_jansson = xtrue)
 
 dnl
 dnl Set pidfile location
@@ -1523,11 +1521,6 @@ dnl
                         AC_MSG_ERROR([Need ICU4C for RSCALE support in httpd]))
                 ],
                 AC_MSG_WARN([Your version of libical can not support non-gregorian recurrences.  Consider upgrading to libical >= 2.0]))
-
-        PKG_CHECK_MODULES([JANSSON], [jansson],
-                AC_DEFINE(WITH_JSON,[],
-                        [Build jCal/jCard/JMAP/TZdist support into httpd?]),
-                AC_MSG_ERROR([Need Jansson for http]))
 
 dnl  Don't bother checking for DKIM until iSchedule gains traction
 dnl        PKG_CHECK_MODULES([DKIM], [opendkim >= 2.7.0],
